--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,18 @@
         </activity>
 
         <activity
-            android:name=".presentation.game.JuegoParejas"
+            android:name=".presentation.game.JuegoAnimals"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        </activity>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity
+            android:name=".presentation.game.JuegoFruits"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".presentation.game.JuegoObjects"
+            android:exported="true">
         </activity>
     </application>
 
